<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:orientation="vertical"
	android:padding="@dimen/element_spacing_default">

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:paddingBottom="@dimen/element_spacing_small"
		android:singleLine="true"
		android:text="@string/api_address"
		android:textAppearance="?android:attr/textAppearanceSmall"/>

	<EditText
		android:id="@+id/edit_api_address"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:inputType="textUri"
		android:singleLine="true"/>

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:paddingBottom="@dimen/element_spacing_small"
		android:paddingTop="@dimen/element_spacing_small"
		android:singleLine="true"
		android:text="@string/ip_address"
		android:textAppearance="?android:attr/textAppearanceSmall"/>

	<EditText
		android:id="@+id/edit_ip_address"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:inputType="textUri"
		android:singleLine="true"/>

	<CheckBox
		android:id="@+id/use_api_to_sign_in"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:paddingBottom="@dimen/element_spacing_small"
		android:paddingTop="@dimen/element_spacing_small"
		android:singleLine="false"
		android:text="@string/use_api_to_sign_in"/>

	<TextView
		android:id="@+id/use_api_to_sign_in_notice"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:paddingTop="@dimen/element_spacing_small"
		android:singleLine="false"
		android:text="@string/use_api_to_sign_in_notice"
		android:textAppearance="?android:attr/textAppearanceMedium"
		android:textColor="@android:color/holo_red_light"
		android:textStyle="bold"/>

	<TextView
		android:id="@+id/set_api_notice"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:paddingTop="@dimen/element_spacing_small"
		android:singleLine="false"
		android:text="@string/set_api_notice"
		android:textAppearance="?android:attr/textAppearanceMedium"
		android:textColor="@android:color/holo_red_light"
		android:textStyle="bold"/>

</LinearLayout>